--- a/css/main.css
+++ b/css/main.css
@@ -11,15 +11,16 @@ h1 {
 
 ul li {
   list-style-type: none;
+  display: inline-block;
 }
 
 ul a {
-  display: inline-block;
   background-color: #713837;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
-
+  padding: .6em .5em .75em;
+  margin: 3em;
 }
 
 ul a:hover {
@@ -27,7 +28,6 @@ ul a:hover {
 }
 
 header {
-  padding: .5em;
   background-color: #79756f;
   border: 3px solid #595652;
 }
