--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ html {
 body {
   background-color: #dbd6cf;
   line-height: 1.5;
-  margin: .3em;
+  margin: 0;
 }
 
 h1 {
@@ -32,6 +32,7 @@ ul a:hover {
 header {
   display: inline-block;
   padding: .6em;
+  margin: .3em;
   background-color: #79756f;
   border: 3px solid #595652;
 }
