--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
+  margin: .3em;
 }
 
 *, *::before, *::after {
@@ -8,8 +10,7 @@ html {
 
 body {
   background-color: #dbd6cf;
-  line-height: 1.5;
-  margin: .3em;
+  margin: 0;
 }
 
 h1 {
