--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,52 @@
-body {
-  background-color: #dbd6cf;
+html {
+  box-sizing: border-box;
   line-height: 1.5;
-  margin: .3em;
+  font-family: sans-serif;
+  background-color: #dbd6cf;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+header {
+  padding: .6em;
+  background-color: #79756f;
+  border-top: 3px solid #595652;
+  border-bottom: 3px solid #595652;
+  text-align: center;
 }
 
 h1 {
   color: #fff;
   font-family: Bevan, serif;
-  text-align: center;
+  margin: 0;
 }
 
 ul li {
-  list-style-type: none;
   display: inline-block;
+  margin-bottom: .3em;
 }
 
-ul a {
+nav a {
   background-color: #713837;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
-  padding: .6em .75em;
+  padding: .5em .75em;
+  display: inline-block;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 ul a:hover {
   background-color: #f33;
-}
-
-header {
-  background-color: #79756f;
-  border: 3px solid #595652;
 }
